--- a/src/main/scss/variables/_variables-normalize.scss
+++ b/src/main/scss/variables/_variables-normalize.scss
@@ -1,47 +1,49 @@
-/*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+////
+/// Normalize CSS (modified normilise.css)
+/// @group normalize
+/// @access public
 
-// Reset the box-sizing
-//
-// Heads up! This reset may cause conflicts with some third-party widgets.
-// For recommendations on resolving such conflicts, see
-// http://getbootstrap.com/getting-started/#third-box-sizing
-* {
-  @include box-sizing(border-box);
+/// Reset the box-sizing
+///
+/// Heads up! This reset may cause conflicts with some third-party widgets.
+/// For recommendations on resolving such conflicts, see
+/// http://getbootstrap.com/getting-started/#third-box-sizing
+*
+{
+	@include box-sizing(border-box);
 }
 *:before,
-*:after {
-  @include box-sizing(border-box);
+*:after
+{
+	@include box-sizing(border-box);
 }
 
-//
-// 1. Set default font family to sans-serif.
-// 2. Prevent iOS text size adjust after orientation change, without disabling
-//    user zoom.
-//
-
-html {
+///
+/// 1. Set default font family to sans-serif.
+/// 2. Prevent iOS text size adjust after orientation change, without disabling
+///    user zoom.
+///
+html
+{
   font-family: sans-serif; // 1
   -ms-text-size-adjust: 100%; // 2
   -webkit-text-size-adjust: 100%; // 2
 }
 
-//
-// Remove default margin.
-//
-
+///
+/// Remove default margin.
+///
 body {
   margin: 0;
 }
 
-// HTML5 display definitions
-// ==========================================================================
-
-//
-// Correct `block` display not defined for any HTML5 element in IE 8/9.
-// Correct `block` display not defined for `details` or `summary` in IE 10/11 and Firefox.
-// Correct `block` display not defined for `main` in IE 11.
-//
-
+/// 
+/// HTML5 display definitions
+///
+/// Correct `block` display not defined for any HTML5 element in IE 8/9.
+/// Correct `block` display not defined for `details` or `summary` in IE 10/11 and Firefox.
+/// Correct `block` display not defined for `main` in IE 11.
+///
 article,
 aside,
 details,
@@ -435,4 +437,15 @@ table {
 td,
 th {
   padding: 0;
+}
+
+
+/* angular-ui requirement for missed href */
+a
+{
+	cursor: pointer;
+}
+/* in IE10/11 an annoying tooltip will show up unless you add the following css: */
+::-ms-tooltip {
+    display: none;
 }
