validators & enable-expression

--- a/src/main/scss/apishore-apppage/_all.scss
+++ b/src/main/scss/apishore-apppage/_all.scss
@@ -14,7 +14,9 @@
 	padding: 15px;
 }
 
-// DESKTOP
+///
+/// DESKTOP
+/// 
 .as-device-wide-desktop
 {
 	$as-appbar-height: $as-appbar-height-desktop;
