--- a/src/main/scss/apishore-apppage/_as-form-input.scss
+++ b/src/main/scss/apishore-apppage/_as-form-input.scss
@@ -99,6 +99,7 @@ $as-input-message-height: 20px;
 		*
 		{
 		    color: $as-input-label-color-disabled;
+		    cursor: default;
 		}
 		&:hover
 		{
