--- a/src/main/scss/mixins/_all.scss
+++ b/src/main/scss/mixins/_all.scss
@@ -22,7 +22,8 @@
 }
 
 /// 
-/// Clearfix
+/// Cross browser transition-property
+/// @param $property
 ///
 @mixin transition-property($property...)
 {
