--- a/src/main/scss/apishore-apppage/_all.scss
+++ b/src/main/scss/apishore-apppage/_all.scss
@@ -5,6 +5,7 @@
 @import "as-grid-system";
 @import "as-apishore-demos";
 @import "as-text";
+@import "as-pagination";
 
 .table-scrollable{
     overflow: auto;
