md-chips viewer theme

--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -63,6 +63,8 @@
 @import "as-recent-list";
 @import "as-coltab";
 
+@import "as-md-chips";
+
 @import "as-md-list-mode-list";
 @import "as-md-list-left-indicator";
 
