--- a/src/main/scss/variables/_variables-core.scss
+++ b/src/main/scss/variables/_variables-core.scss
@@ -189,6 +189,9 @@ $as-breadcrumb-current-color: #333;
 $as-dialog-zindex: 10;
 $as-dialog-bg-color: #fff;
 
+//CHIPS
+$md-chips-radius: 2px;
+
 // branding images
 $as-brand-bg-color: rgba(#595D67, 0.7);
 $as-brand-bg-image: none;
