--- a/src/main/scss/variables/_variables-core.scss
+++ b/src/main/scss/variables/_variables-core.scss
@@ -191,6 +191,7 @@ $as-dialog-bg-color: #fff;
 
 //CHIPS
 $md-chips-radius: 2px;
+$as-md-chips-editor-item-height: 28px;
 
 // branding images
 $as-brand-bg-color: rgba(#595D67, 0.7);
