--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -58,6 +58,7 @@
 @import "as-status-label";
 @import "as-toolbar";
 @import "as-list-type-2cols-content";
+@import "as-md-card-indicator";
 @import "as-login-form";
 
 @import "as-recent-list";
