--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -33,6 +33,8 @@
 @import "as-card";
 @import "as-card-theme";
 
+@import "md-list/all";
+
 @import "as-embedded-editors-list";
 
 @import "as-geo-area-picker";
@@ -57,7 +59,6 @@
 @import "as-progress-bar";
 @import "as-status-label";
 @import "as-toolbar";
-@import "as-list-type-2cols-content";
 @import "as-md-card-indicator";
 @import "as-login-form";
 
@@ -65,9 +66,6 @@
 @import "as-coltab";
 
 @import "as-md-chips";
-
-@import "as-md-list-mode-list";
-@import "as-md-list-left-indicator";
 
 @import "as-timeline";
 @import "as-dashboard";
