--- a/src/main/scss/apishore-apppage/_as-form-inline.scss
+++ b/src/main/scss/apishore-apppage/_as-form-inline.scss
@@ -2,10 +2,17 @@
 {
 	background-color: map-get($as-palette-grey, 200);
 	padding: $as-gutter;
+	&.asa-compact
+	{
+		padding: $as-gutter / 2;
+		padding-top: 0px;
+		padding-bottom: 0px;
+		background-color: transparent;
+	}
 }
 .as-inline-form
 {
-	&.asa-top
+	&.asa-compact
 	{
 		
 	}
