--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -33,6 +33,7 @@
 @import "as-card";
 @import "as-card-theme";
 
+@import "as-crud/all";
 @import "md-list/all";
 
 @import "as-embedded-editors-list";
