--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -1,4 +1,5 @@
 @import "app-bar/all";
+@import "as-sidebar/all";
 @import "as-data-table";
 @import "as-data-card";
 @import "as-form";
@@ -14,11 +15,9 @@
 @import "as-form-input-color-swatch";
 @import "as-form-input-thumbnail";
 @import "as-input-incrementers";
-@import "as-sidebar-shift-menu";
 @import "as-view-settings";
 @import "as-view-control";
 @import "as-two-list-selection";
-@import "as-sidebar";
 @import "as-infobar";
 @import "as-main-menu";
 @import "as-login-form";
