--- a/src/main/scss/apishore-apppage/as-sidebar/_as-sidebar.scss
+++ b/src/main/scss/apishore-apppage/as-sidebar/_as-sidebar.scss
@@ -64,12 +64,12 @@
 }
 .as-sidebar-menu-group-title
 {
-	color: map-get($as-palette-grey, 600);
-	font-weight: bold;
+	color: map-get($as-palette-brand, 800);
+	text-transform: uppercase;
 	font-size: 14px;
 	
-	padding: $as-gutter / 2;
-	padding-left: $as-gutter + 2px;
+	padding: $as-gutter;
+	padding-left: $as-gutter + 4px;
 }
 .as-sidebar-menu
 {
@@ -83,8 +83,10 @@
 }
 .as-sidebar-menu-item
 {
+	@include user-select(none);
 	display: block;
 	position: relative;
+	color: map-get($as-palette-primary, 800);
 	&.asa-primary
 	{
 		--background-color: map-get($as-palette-grey, 300);
@@ -137,7 +139,7 @@
 	}
 	&.asa-dark
 	{
-		color: #333;
+		color: map-get($as-palette-primary,300);
 		&.asa-secondary
 		{
 			color: #333;
