--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -1,7 +1,9 @@
-@import "app-bar/all";
+@import "bars/all";
 @import "as-sidebar/all";
+
 @import "as-data-table";
 @import "as-data-card";
+
 @import "as-form";
 @import "as-form-inline";
 @import "as-form-input";
@@ -58,7 +60,6 @@
 @import "as-grid";
 @import "as-progress-bar";
 @import "as-status-label";
-@import "as-toolbar";
 @import "as-md-card-indicator";
 @import "as-login-form";
 
