--- a/src/main/scss/apishore-apppage/_as-form.scss
+++ b/src/main/scss/apishore-apppage/_as-form.scss
@@ -6,6 +6,11 @@
 {
 	padding: $as-gutter;
 	padding-top: 0px;
+	.as-card
+	{
+		margin-left: 0px;
+		margin-right: 0px;
+	}
 }
 .as-form-delimiter-label
 {
