--- a/src/main/scss/apishore-apppage/card/_as-card.scss
+++ b/src/main/scss/apishore-apppage/card/_as-card.scss
@@ -1,14 +1,14 @@
 $card-padding: 16px !default;
 $card-box-shadow: $as-whiteframe-shadow-1dp !default;
 
-.as-card {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  margin: $as-baseline-grid;
-
-  box-shadow: $card-box-shadow;
-
+.as-card
+{
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	margin: $as-baseline-grid;
+	box-shadow: $card-box-shadow;
+	
   .as-card-header {
     padding: $card-padding;
     display: flex;
