--- a/src/main/scss/apishore-apppage/sidebar/_as-sidebar.scss
+++ b/src/main/scss/apishore-apppage/sidebar/_as-sidebar.scss
@@ -133,7 +133,7 @@
 		{
 			>a
 			{
-				color: map-get($as-palette-cyan, 400);
+				background-color: map-get($as-palette-primary, 300);
 			};
 		}
 	}
