--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -2,6 +2,7 @@
 @import "sidebar/all";
 @import "card/all";
 @import "fieldset/all";
+@import "as-chart/all";
 
 @import "as-data-table";
 @import "as-data-card";
