--- a/src/main/scss/apishore-apppage/as-chart/_value-total-hline.scss
+++ b/src/main/scss/apishore-apppage/as-chart/_value-total-hline.scss
@@ -1,8 +1,14 @@
+.as-chart-value-total-hline-label
+{
+	color: map-get($as-palette-grey, 800);
+	margin-top: $as-gutter;
+}
 .as-chart-value-total-hline-line
 {
-	background-color: map-get($as-palette-grey, 500);
+	background-color: map-get($as-palette-grey, 100);
 }
 .as-chart-value-total-hline-line-inner
 {
 	background-color: map-get($as-palette-green, 500);
+	height: 8px;
 }
