--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -3,6 +3,7 @@
 @import "card/all";
 @import "fieldset/all";
 @import "as-chart/all";
+@import "as-image/all";
 
 @import "as-data-table";
 @import "as-data-card";
