--- a/src/main/scss/apishore-apppage/as-image/as-avatar/_all.scss
+++ b/src/main/scss/apishore-apppage/as-image/as-avatar/_all.scss
@@ -1,12 +1,21 @@
+$as-avatar-size: 48px;
+$as-avatar-border-size: 4px;
+
 .as-avatar-outer
 {
-	
+	width: $as-avatar-size + $as-avatar-border-size * 2;
+	height: $as-avatar-size + $as-avatar-border-size * 2;
+	border: solid $as-avatar-border-size map-get($as-palette-grey, 500);
+	border-radius: $as-avatar-size;
 }
 .as-avatar-img
 {
-	
+	width: $as-avatar-size;
+	height: $as-avatar-size;
+	border-radius: $as-avatar-size;
 }
 .as-avatar-inner
 {
-	
+	width: $as-avatar-size;
+	height: $as-avatar-size;
 }
