--- a/src/main/scss/apishore-apppage/as-chart/_value-total-vline.scss
+++ b/src/main/scss/apishore-apppage/as-chart/_value-total-vline.scss
@@ -1,14 +1,30 @@
+.as-chart-value-total-vline-row
+{
+	@extend .as-hbox;
+}
+.as-chart-value-total-vline-col
+{
+	@extend .as-cell-fixed;
+}
 .as-chart-value-total-vline-label
 {
+	@extend .as-cell-fixed;
 	color: map-get($as-palette-grey, 800);
 	margin-top: $as-gutter;
+	position: relative;
 }
 .as-chart-value-total-vline-line
 {
+	@extend .as-cell-fixed;
+	position: relative;
+	height: 120px;
 	background-color: map-get($as-palette-grey, 100);
+	width: 30px;
 }
 .as-chart-value-total-vline-line-inner
 {
+	position: absolute;
+	bottom: 0px;
+	width: 8px;
 	background-color: map-get($as-palette-green, 500);
-	height: 8px;
 }
