--- a/src/main/scss/apishore-apppage/as-chart/_value-total-hline.scss
+++ b/src/main/scss/apishore-apppage/as-chart/_value-total-hline.scss
@@ -1,3 +1,9 @@
+.as-chart-value-total-hline-cell
+{
+	margin-left: $as-gutter;
+	margin-right: $as-gutter;
+}
+
 .as-chart-value-total-hline-label
 {
 	color: map-get($as-palette-grey, 800);
