--- a/src/main/scss/apishore-apppage/as-chart/_value-total-vline.scss
+++ b/src/main/scss/apishore-apppage/as-chart/_value-total-vline.scss
@@ -2,15 +2,17 @@
 {
 	@extend .as-hbox;
 }
-.as-chart-value-total-vline-col
+.as-chart-value-total-vline-cell
 {
 	@extend .as-cell-fixed;
+	margin-left: $as-gutter;
+	margin-right: $as-gutter;
 }
 .as-chart-value-total-vline-label
 {
 	@extend .as-cell-fixed;
 	color: map-get($as-palette-grey, 800);
-	margin-top: $as-gutter;
+	margin-top: $as-gutter / 2;
 	position: relative;
 }
 .as-chart-value-total-vline-line
@@ -19,7 +21,7 @@
 	position: relative;
 	height: 120px;
 	background-color: map-get($as-palette-grey, 100);
-	width: 30px;
+	width: 8px;
 }
 .as-chart-value-total-vline-line-inner
 {
