--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -4,6 +4,7 @@
 @import "fieldset/all";
 @import "as-chart/all";
 @import "as-image/all";
+@import "as-tabs/all";
 
 @import "as-data-table";
 @import "as-data-card";
@@ -54,7 +55,6 @@
 @import "as-progress-linear";
 
 @import "as-breadcrumb";
-@import "as-tabs";
 @import "as-dialog";
 @import "as-button";
 @import "as-button-theme";
