--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -5,6 +5,7 @@
 @import "as-chart/all";
 @import "as-image/all";
 @import "as-tabs/all";
+@import "as-graph/all";
 
 @import "as-data-table";
 @import "as-data-card";
