data model. add existing remove menu no duplicates

--- a/src/main/scss/apishore-apppage/as-graph/_all.scss
+++ b/src/main/scss/apishore-apppage/as-graph/_all.scss
@@ -2,6 +2,12 @@
 {
 
 }
+.as-graph-grid-line
+{
+	fill: none;
+	stroke: map-get($as-palette-grey, 100);
+	stroke-width: 1px;
+}
 .as-graph-node
 {
   position: absolute;
