--- a/src/main/scss/apishore-apppage/as-graph/_all.scss
+++ b/src/main/scss/apishore-apppage/as-graph/_all.scss
@@ -120,6 +120,7 @@
 	background-color: #fff;
 	&.dndDragging
 	{
+		overflow:hidden;
 		z-index:100;
 		border: solid 1px map-get($as-palette-grey, 500);
 	}
